add --param early-inlining-insns=12 when GCC 4.5.[01] is used

according to http://gcc.gnu.org/bugzilla/show_bug.cgi?id=45267 GCC 4.5
uses a too small value for the inlining heuristics. Good that we can fix
it with --param.