include/Vc/global.h
@@ -141,8 +141,6 @@
 #    undef VC_IMPL_AVX
 #    undef VC_IMPL_LRBni
 #    define VC_IMPL_Scalar 1
-#  elif (__GNUC__ == 4 && __GNUC_MINOR__ == 5)
-#    warning "GCC 4.5.[01] are known to fail at inlining some basic functions, resulting in severe performance penalties."
 #  endif
 #endif
 
