cmake/AddCompilerFlag.cmake
@@ -1,6 +1,6 @@
 include (CheckCXXCompilerFlag)
 macro(AddCompilerFlag _flag)
-   string(REGEX REPLACE "[/:=]" "_" _flag_esc "${_flag}")
+   string(REGEX REPLACE "[/:= ]" "_" _flag_esc "${_flag}")
    check_cxx_compiler_flag("${_flag}" check_compiler_flag_${_flag_esc})
    if(check_compiler_flag_${_flag_esc})
       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${_flag}")
